@@ -851,9 +851,6 @@ void esrv_send_item( object* ob, object* obx ){
 void dragon_ability_gain( object* ob, int x, int y ){
 }
 
-void weather_effect(mapstruct *m){
-}
-
 void set_darkness_map( mapstruct* m){
 }
 
